integrated coingecko api

--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
+    "@tanstack/react-table": "^8.12.0",
     "@types/react-router-dom": "^5.3.3",
+    "ahooks": "^3.7.10",
+    "axios": "^1.6.7",
     "framer-motion": "^11.0.5",
     "react": "^18.2.0",
     "react-custom-scrollbars-2": "^4.5.0",
