--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
+    "@ethersproject/address": "^5.7.0",
     "@tanstack/react-table": "^8.12.0",
     "@types/react-router-dom": "^5.3.3",
     "ahooks": "^3.7.10",
     "axios": "^1.6.7",
     "framer-motion": "^11.0.5",
+    "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-custom-scrollbars-2": "^4.5.0",
     "react-dom": "^18.2.0",
