--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "@tanstack/react-table": "^8.12.0",
     "@types/react-router-dom": "^5.3.3",
     "ahooks": "^3.7.10",
+    "apexcharts": "^3.46.0",
     "axios": "^1.6.7",
     "framer-motion": "^11.0.5",
     "react": "^18.2.0",
+    "react-apexcharts": "^1.4.1",
     "react-custom-scrollbars-2": "^4.5.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
