--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@emotion/styled": "^11.11.0",
     "@ethersproject/address": "^5.7.0",
     "@tanstack/react-table": "^8.12.0",
+    "@types/react-html-parser": "^2.0.6",
     "@types/react-router-dom": "^5.3.3",
     "ahooks": "^3.7.10",
     "apexcharts": "^3.46.0",
@@ -26,6 +27,7 @@
     "react-apexcharts": "^1.4.1",
     "react-custom-scrollbars-2": "^4.5.0",
     "react-dom": "^18.2.0",
+    "react-html-parser": "^2.0.2",
     "react-icons": "^5.0.1",
     "react-router-dom": "^5.3.0"
   },
